# JA4Finger

./: Cargo.toml  PR-20260402-1.md  PR-20260402-1R.md  README.md  go.mod
capture/: doc.go  live_linux.go  live_unsupported.go  pcap.go  source_shared.go  source_test.go
cmd/ja4finger/: main.go  main_test.go
decoder/: doc.go  tls.go  tls_test.go
docs/superpowers/plans/: 2026-04-02-ja4-hash-input-debug.md  2026-04-02-live-exclude-ip.md  2026-04-03-aggregate-command.md  2026-04-03-cli-command-refactor.md
docs/superpowers/specs/: 2026-04-02-capture-engine-design.md  2026-04-02-ja4-hash-input-debug-design.md  2026-04-02-live-exclude-ip-design.md  2026-04-03-code-comments-design.md
engine/: doc.go  pipeline.go  pipeline_test.go  processor.go  processor_test.go
fingerprint/: doc.go  ja4.go  ja4_test.go
openspec/changes/add-rust-ja4-fingerprinter/: design.md  proposal.md  tasks.md
openspec/changes/add-rust-ja4-fingerprinter/specs/capture-modes/: spec.md
openspec/changes/add-rust-ja4-fingerprinter/specs/ja4-client-fingerprinting/: spec.md
openspec/changes/archive/2026-04-02-add-rust-ja4-fingerprinter/: design.md  proposal.md  tasks.md
openspec/changes/build-ja4-fingerprint-tool/: design.md  proposal.md  tasks.md
openspec/specs/capture-modes/: spec.md
openspec/specs/ja4-client-fingerprinting/: spec.md
output/: doc.go  jsonl.go
scripts/: package-musl-release.sh
src/: aggregator.rs  capture.rs  cli.rs  config.rs  fingerprint.rs  lib.rs  main.rs  output.rs  pipeline.rs  runtime.rs
src/commands/: aggregate.rs  daemon.rs  mod.rs  pcap.rs
tests/: cli.rs
(+2 files in other folders)
